Fix: reading e inserting on database to each 100 rows

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-      - ./prisma/sqlite:/app/prisma/sqlite # Persistir o arquivo do banco de dados
+      - ./prisma/sqlite:/app/prisma/sqlite
     command: npm run start:dev
