--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.1",
-    "@prisma/client": "^5.19.1",
+    "bullmq": "^5.14.0",
     "csv-parser": "^3.0.0",
     "csv-write-stream": "^2.0.0",
     "csv-writer": "^1.6.0",
+    "exceljs": "^4.4.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -36,6 +37,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.20.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
